add end-point contact
